k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    name: backend-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 4000
    - name: https
      port: 443
      targetPort: 4000
  selector:
    name: backend-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      name: backend-pod
  replicas: 2
  template:
    metadata:
      name: backend-pod
      labels:
        name: backend-pod
    spec:
      containers:
        - name: backend-container
          image: davidmc1/backend-image
          ports:
            - containerPort: 4000
          resources:
            limits: {}
