k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    name: frontend-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 3000
    - name: https
      port: 443
      targetPort: 3000
  selector:
    name: frontend-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      name: frontend-pod
  replicas: 2
  template:
    metadata:
      name: frontend-pod
      labels:
        name: frontend-pod
    spec:
      containers:
        - name: frontend-container
          image: davidmc1/frontend-image
          ports:
            - containerPort: 3000
          resources:
            limits: {}
