k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: davidmcnamee-gke-static-ip
spec:
  tls:
    - secretName: tls-certs-backend
    - secretName: tls-certs-frontend
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 80
  rules:
  - host: shopify.da.vidmcnam.ee
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 80
  - host: meme-marketplace.da.vidmcnam.ee
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 80
